@@ -1543,7 +1543,7 @@ The constructors for both classes work the same:
    .. method:: isdisjoint(other)
 
       Return True if the set has no elements in common with *other*.  Sets are
-      disjoint if and only if their interesection is the empty set.
+      disjoint if and only if their intersection is the empty set.
 
       .. versionadded:: 2.6
 
